--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "socket.io": "^1.4.8",
-    "leaflet": "^0.7.7"
+    "leaflet": "^0.7.7",
+    "socket.io-client": "^1.4.8"
   }
 }
