--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "socket.io": "^1.4.8",
     "leaflet": "^0.7.7",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "jquery": "^3.1.0"
   }
 }
